--- a/package.json
+++ b/package.json
@@ -3,24 +3,28 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
     },
     "dependencies": {
-        "axios": "^1.6.0",
-        "next": "^16.1.6",
-        "react": "^19.2.4",
-        "react-dom": "^19.2.4",
-        "react-icons": "^4.11.0",
-        "react-toastify": "^9.1.3"
+      "axios": "^1.6.0",
+      "next": "^14.1.0",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-icons": "^4.11.0",
+      "react-toastify": "^9.1.3"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.23",
-        "eslint": "^8.50.0",
-        "eslint-config-next": "14.0.0",
-        "postcss": "^8.5.6",
-        "tailwindcss": "^3.4.19"
+      "autoprefixer": "^10.4.23",
+      "eslint": "^8.50.0",
+      "eslint-config-next": "^14.0.0",
+      "postcss": "^8.5.6",
+      "tailwindcss": "^3.4.19",
+      "@types/node": "^20.11.0",
+      "@types/react": "^18.2.0",
+      "@types/react-dom": "^18.2.0",
+      "typescript": "^5.3.0"
     }
-}
+  }
